correcao de erros

--- a/src/pages/posts/styles.module.sass
+++ b/src/pages/posts/styles.module.sass
@@ -27,6 +27,8 @@
         border: 2px solid $blue-900
         border-radius: 6px
         border-image: linear-gradient(95deg, #31b4d0, transparent) 1
+        @media(max-width: 400px)
+            max-height: 330px
 
     & strong
         display: block
