--- a/src/styles/home.module.sass
+++ b/src/styles/home.module.sass
@@ -23,7 +23,7 @@
 
 .ctaText
     max-width: 600px
-    @include flexbox(center, start, column)
+    @include flexbox(center, flex-start, column)
 
     & h1
         font-size: 3.5rem
