--- a/src/pages/posts/post.module.sass
+++ b/src/pages/posts/post.module.sass
@@ -15,6 +15,8 @@
         max-width: 100% 
         max-height: 410px 
         border-radius: 5px 
+        @media(max-width: 400px)
+            max-height: 330px
 
     & h1 
         font-size: 2rem 
